# worder

./: .gitignore  CMakeLists.txt  README.md
dict/: dict.test
src/: CMakeLists.txt  worder.h
src/demo/: CMakeLists.txt  demo1.c
src/elements/: bucket.c  generator.c  transformer.c
src/tests/: CMakeLists.txt  test_main.c
